--- a/code/src/index.css
+++ b/code/src/index.css
@@ -80,6 +80,12 @@ h1 span {
   margin-top: 14px;
   margin-bottom: 14px;
   outline: none;
+  resize: none;
+}
+
+.form-container p {
+  margin-top: 0;
+  text-align: right;
 }
 
 .submit-button {
@@ -196,3 +202,9 @@ h1 span {
   }
 
  }
+
+
+
+
+
+ 
