--- a/code/src/index.css
+++ b/code/src/index.css
@@ -58,6 +58,7 @@ code {
   border: 1px solid black;
   background-color: whitesmoke;
   width: 70%;
+  max-width: 250px;
   padding: 25px;
   box-shadow: 5px 5px black;
   font-size: 14px;
@@ -111,6 +112,7 @@ textarea:focus {
   border: 1px solid black;
   background-color: white;
   width: 70%;
+  max-width: 250px;
   padding: 25px;
   box-shadow: 5px 5px black;
   margin: 30px auto;
