--- a/code/src/index.css
+++ b/code/src/index.css
@@ -173,7 +173,8 @@ textarea:focus {
 .error-message {
   border: 1px solid black;
   background-color: whitesmoke;
-  width: 400px;
+  width: 70%;
+  max-width: 250%;
   padding: 25px;
   box-shadow: 5px 5px black;
   font-size: 20px;
@@ -184,6 +185,9 @@ textarea:focus {
 }
 
 .try-again-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: fit-content;
   border-radius: 20px;
   background-color: rgba(255, 0,	0, 0.3);
@@ -192,16 +196,15 @@ textarea:focus {
   margin: 0 auto;
 }
 
-.try-again-button:hover {
-  background-color: rgba(255, 0,	0, 0.5);
-  transform:scale(1.1);
-}
-
 /*Styling footer*/
 
 .footer {
   text-align:center;
   font-size: 10px;
+}
+
+.credits-footer {
+  color: black;
 }
 
 .heart-img {
@@ -299,4 +302,14 @@ textarea:focus {
   .heart-img {
     width: 20px;
   }
+
+  .error-message {
+    width:380px;
+  }
+
+  .try-again-button:hover {
+    background-color: rgba(255, 0,	0, 0.5);
+    transform:scale(1.1);
+  }
+
 }
