--- a/code/src/index.css
+++ b/code/src/index.css
@@ -26,6 +26,7 @@ code {
 /*Styling the header*/
 .header {
   display:flex;
+  justify-content: center;
   align-items: center;
   margin-bottom: 20px;
 }
@@ -177,7 +178,7 @@ textarea:focus {
   max-width: 250%;
   padding: 25px;
   box-shadow: 5px 5px black;
-  font-size: 20px;
+  font-size: 12px;
   font-weight: 600;
   margin-top: 150px;
   text-align: center;
@@ -305,6 +306,7 @@ textarea:focus {
 
   .error-message {
     width:380px;
+    font-size:20px;
   }
 
   .try-again-button:hover {
