--- a/code/src/index.css
+++ b/code/src/index.css
@@ -216,8 +216,6 @@ textarea:focus {
 
 @media (min-width: 768px){
   .header {
-    display:flex;
-    align-items: center;
     margin-bottom: 20px;
   }
 
@@ -233,13 +231,8 @@ textarea:focus {
   }
 
   .form-container {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid black;
-    background-color: whitesmoke;
-    width: 380px;
-    padding: 25px;
-    box-shadow: 5px 5px black;
+    max-width: 450px;
+    width:70%;
     font-size: 20px;
     font-weight: 700;
   }
@@ -249,10 +242,6 @@ textarea:focus {
   }
 
   .button {
-    width: fit-content;
-    border-radius: 20px;
-    background-color: rgba(255, 0,	0, 0.3);
-    border:none;
     padding: 8px;
     font-size: 16px;
   }
@@ -263,12 +252,9 @@ textarea:focus {
   }
 
   .message-container {
-    border: 1px solid black;
-    background-color: white;
-    width: 380px;
-    padding: 25px;
-    box-shadow: 5px 5px black;
-    margin: 30px 0;
+    max-width: 450px;
+    width:70%;
+    margin: 30px auto;
   }
 
   .message-text {
@@ -276,18 +262,7 @@ textarea:focus {
   }
 
   .heart-date-container {
-    display: flex;
-    justify-content: space-between;
     font-size: 16px;
-  }
-  
-  .heart-button {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color:rgba(208, 203, 203, 0.3);
-    border:none;
-    font-size:16px;
   }
 
   .heart-button:hover{
@@ -296,7 +271,6 @@ textarea:focus {
   }
 
   .footer {
-    text-align:center;
     font-size: 12px;
   }
   
@@ -305,7 +279,7 @@ textarea:focus {
   }
 
   .error-message {
-    width:380px;
+    width:450px;
     font-size:20px;
   }
 
