--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 body {
-  margin: 40px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  margin: 40px 20px;
+  font-family: 'Roboto Mono', monospace; /*-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif;*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -12,25 +14,90 @@ code {
     monospace;
 }
 
-/*.heart-button {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  
-}*/
-
-.heart-button:hover { 
-  outline: 0; /* Removes the default outline that appears around the button  when clicking on the heart*/ 
-  background: #fcbacb; /* Changes the color of the circle when clicking on the heart*/
+.form {
+  display: flex;
+  flex-direction: column;
+  border: solid 1px;
+  box-shadow: 5px 7px;
+  background: #e3e2e7;
 }
+
+.form-title {
+  font-size: 16px;
+  font-weight: bold;
+  padding-left: 10px;
+  margin-top: 10px;
+}
+
+.input {
+  margin: 10px;
+  padding: 20px;
+  height: 30px;
+  width: 80%;
+  vertical-align: top;
+  overflow-y: auto;
+  overflow-wrap: break-word;
+  resize: none;
+}
+
+.thought-button {
+  width: 65%;
+  padding: 10px;
+  margin: 5px 0 20px 10px;
+  border-radius: 20px;
+  background-color:#fcbacb;
+  font-weight: bold;
+  border: none;
+  outline: none;
+}
+
+.thought-button:hover {
+  background: #f97194;
+}
+
+.article {
+  display: flex;
+  flex-wrap: wrap;
+  border: solid 1px;
+  box-shadow: 5px 7px;
+  margin-top: 40px;
+  
+}
+
+.thought-message {
+  font-size: 18px;
+  font-weight: 600;
+  width: 80%;
+  padding-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  word-wrap: break-word;
+}
+
+.thought-info {
+  display: flex;
+  justify-content:space-between;
+  width: 100%;
+  margin: 10px;
+}
+
+.thought-hearts {
+  display: flex;
+}
+
+.number-of-hearts {
+  margin-left: 10px;
+}
+
 
 .heart-button-unclicked {
   height: 50px;
   width: 50px;
   border-radius: 50%;
   border: none;
-  /*outline:none;*/
   transition: 0.3s;
+  outline: none;
+  background: #e3e2e7;
 }
 
 .heart-button-clicked {
@@ -40,6 +107,15 @@ code {
   border: none;
   transition: 0.3s;
   background:  #fcbacb;
+  outline: none;
+}
+
+.heart-button-unclicked:hover {
+  background: #fcbacb;
+}
+
+.heart-button-clicked:hover {
+  background: #f97194;
 }
 
 .heart-button-clicked:focus { 
@@ -47,5 +123,52 @@ code {
 }
 
 .heart {
-  font-size: 20px;
+  font-size: 16px;
 }
+
+.post-time {
+  color: #c2bfc9;
+}
+
+@media only screen and (min-width: 768px) {
+
+  .section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .form, .article {
+    width: 60%;
+  }
+
+  .article {
+    padding-top: 20px;
+  }
+
+  .input, .thought-button {
+    margin-left: 20px;
+  }
+
+  .thought-button {
+    width: 50%;
+    
+  }
+
+  .form-title, .thought-message {
+    padding-left: 20px;
+  }
+
+  .thought-info {
+    margin: 0 20px 20px 20px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  
+  .form, .article {
+    width: 500px;
+  }
+}
+
