Updated the function to validate form input and styling for the message, updated README-file

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -114,6 +114,10 @@ p {
   margin: 0px 3px;
 }
 
+/* Error message */
+.error-message {
+  color: red;
+}
 
 /** MESSAGE LIST **/
 /* Message element */
