wrote my reflections in readme

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -59,6 +59,7 @@ label {
   outline: none;
   box-sizing: border-box;
   padding: 10px;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .send-message-button {
