--- a/code/src/index.css
+++ b/code/src/index.css
@@ -89,9 +89,15 @@ p {
   margin-right: 10px;
   cursor: pointer;
   border: none;
+}
+
+.heart-btn-unliked {
   background-color: rgb(233, 229, 229);
 }
 
+.heart-btn-liked {
+  background-color: rgb(245, 136, 136);
+}
 
 @media screen and (min-width: 700px) {
 
