--- a/code/src/index.css
+++ b/code/src/index.css
@@ -24,6 +24,14 @@ code {
   justify-content: center;
 }
 
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+}
+
 form {
   border: 1px solid #000;
   box-shadow: 5px 6px #000;
@@ -36,21 +44,12 @@ form {
   margin-bottom: 30px;
 }
 
-.form-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 300px;
-}
-
 .text-input {
   margin-top: 10px;
   margin-bottom: 10px;
   font-family: "Inconsolata", monospace;
   padding: 10px;
   border: 1px solid #a4a4a4;
-  background-color: #fff;
   box-sizing: border-box;
   resize: none;
 }
@@ -71,13 +70,32 @@ form {
   padding: 7px;
 }
 
+img {
+  width: 20px;
+  height: 20px;
+}
+
 .thought-card {
   border: 1px solid #000;
-  width: 280px; 
+  width: 278px; 
   margin-bottom: 30px;
   box-shadow: 5px 6px #000;
   padding: 10px;
+  overflow-wrap: break-word;
+}
+
+h4 {
+  font-family: "Manlo", monospace;
+  font-weight: 400;
   font-size: 14px;
+  margin: 0;
+  margin-top: 10px;
+}
+
+p {
+  font-family: "Manlo", monospace;
+  color: #c9c9c9;
+  font-size: 12px;
 }
 
 .bottom-info-container {
@@ -93,24 +111,6 @@ form {
 
 .like-counter {
   color: #a4a4a4;
-}
-
-h4 {
-  font-family: "Manlo", monospace;
-  font-weight: 400;
-  margin: 0;
-  margin-top: 10px;
-}
-
-p {
-  font-family: "Manlo", monospace;
-  color: #c9c9c9;
-  font-size: 12px;
-}
-
-img {
-  width: 20px;
-  height: 20px;
 }
 
 .heart-button {
