--- a/code/src/index.css
+++ b/code/src/index.css
@@ -51,14 +51,14 @@ main {
 }
 /**/
 
-.message-list, .message-list__new-message  {
+.display-messages  {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
 
-.message{
+.message, .new-message{
   width: 90%;
   display: flex;
   flex-direction: column;
@@ -73,7 +73,7 @@ main {
 
 /* class for the post just submitted.
 With animations*/
-.message-list__new-message .message:first-of-type {
+.new-message:first-of-type {
   align-self: flex-start;
   width: 0;
   opacity: 0;
@@ -88,8 +88,8 @@ With animations*/
   }
 }
 
-.message-list__new-message .message:first-of-type .message-info,
-.message-list__new-message .message:first-of-type  .message__post {
+.new-message:first-of-type .message-info,
+.new-message:first-of-type  .message__post {
   opacity: 0;
   animation: appear 2s forwards;
 }
@@ -167,7 +167,14 @@ With animations*/
 
 /* --- MessageForm --- */
 
-.message-form {
+.send-message {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.send-message-form {
   width: 90%;
   display: flex;
   flex-direction: column;
@@ -178,7 +185,11 @@ With animations*/
   border: solid rgb(158, 158, 158) 0.5px;
 }
 
-.message-form__heading {
+label {
+  width: 90%;
+}
+
+.send-message-form__heading {
   font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -187,7 +198,7 @@ With animations*/
   margin-top: 15px;
 }
 
-.message-form__input {
+.send-message-form__input {
   height: 50px;
   width: 90%;
   margin-bottom: 10px;
@@ -195,14 +206,14 @@ With animations*/
   overflow-y: auto;
 }
 
-.message-form__input-count {
+.send-message-form__counter {
   display: flex;
   justify-content: flex-end;
   font-size: 14px;
   width: 90%;
 }
 
-.message-form__input-count p {
+.send-message-form__counter p {
   margin: 0;
 }
 
