--- a/code/src/index.css
+++ b/code/src/index.css
@@ -2,16 +2,9 @@
 
 body {
   margin: 40px 20px;
-  font-family: 'Roboto Mono', monospace; /*-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;*/
+  font-family: 'Roboto Mono', monospace; 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 .form {
@@ -60,8 +53,7 @@ code {
   flex-wrap: wrap;
   border: solid 1px;
   box-shadow: 5px 7px;
-  margin-top: 40px;
-  
+  margin-top: 40px; 
 }
 
 .thought-message {
@@ -71,7 +63,7 @@ code {
   padding-left: 10px;
   margin-top: 10px;
   margin-bottom: 20px;
-  word-wrap: break-word;
+  word-wrap: break-word; /* Allow long words to be able to break and wrap onto the next line */
 }
 
 .thought-info {
@@ -88,7 +80,6 @@ code {
 .number-of-hearts {
   margin-left: 10px;
 }
-
 
 .heart-button-unclicked {
   height: 50px;
@@ -137,6 +128,7 @@ code {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    
   }
 
   .form, .article {
