--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,13 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  monospace;
+}
+
 body {
-  margin: 40px;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -13,14 +21,65 @@ code {
     monospace;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 50px 10px;
+}
+
 .new-thought-form {
   display: flex;
   flex-direction: column;
+  width: 280px;
+  margin: 0 10px 50px 10px;
+  border: 1px solid #000000;
+  background-color: rgba(228, 227, 226, 0.781);
+  box-shadow: 10px 10px #000000;
 }
+
+.new-thought-label {
+  margin: 10px;
+  font-size: 14px;
+}
+
+.thought-message-text-area {
+  height: 50px;
+  padding: 5px;
+  margin: 0 10px 10px 10px;
+  resize: none;
+}
+
+.new-thought-button {
+  width: 200px;
+  height: 30px;
+  margin: 0 10px 10px 10px;
+  border: 0;
+  border-radius: 30px;
+  background-color: rgba(235, 87, 87, 0.486);
+}
+
 .thought-date {
   font-style: italic;
 }
 
-.thought-message-text-area {
-  resize: none;
+
+
+.hearts-button {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  padding: 3px;
+  background-color: rgb(211, 211, 211);
+  border: 0;
+  text-decoration: none;
 }
+
+.hearts-inactive {
+  background-color: rgb(235, 236, 237);
+}
+.hearts-active {
+  background-color: rgba(235, 87, 87, 0.486);
+}
+
+
