--- a/code/src/index.css
+++ b/code/src/index.css
@@ -56,7 +56,7 @@ code {
   box-shadow: 8px 8px 1px rgb(13, 13, 14);
   background-color: rgba(248, 239, 239, 0.76);
   margin: 40px 20px;
-  padding: 20px 10px;
+  padding: 10px 5px 20px 10px;
   overflow-wrap: break-word;
 
 }
@@ -79,6 +79,7 @@ p {
 .btn-counter {
   display: flex;
   align-items: center;
+  margin-right: 25px;
 }
 
 .heart-btn {
@@ -86,7 +87,7 @@ p {
   height: 35px;
   border-radius: 50%;
   padding: 10px;
-  margin-right: 10px;
+  margin-right: 8px;
   cursor: pointer;
   border: none;
 }
