--- a/code/src/index.css
+++ b/code/src/index.css
@@ -28,6 +28,10 @@ code {
   margin: 50px 10px;
 }
 
+.new-thought-form-container {
+  margin: 0 auto;
+}
+
 .new-thought-form {
   display: flex;
   flex-direction: column;
@@ -35,48 +39,65 @@ code {
   margin: 0 10px 50px 10px;
   border: 1px solid #000000;
   background-color: rgba(228, 227, 226, 0.781);
-  box-shadow: 10px 10px #000000;
+  box-shadow: 6px 6px #000000;
 }
 
 .new-thought-label {
   margin: 10px;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 .thought-message-text-area {
   height: 50px;
   padding: 5px;
   margin: 0 10px 10px 10px;
+  border: 1px solid #7c7b7b;
   resize: none;
+  font-size: 12px;
+}
+
+.thought-message-text-area:focus {
+  outline: none;
 }
 
 .new-thought-button {
   width: 200px;
   height: 30px;
   margin: 0 10px 10px 10px;
+  padding: 5px;
   border: 0;
   border-radius: 30px;
   background-color: rgba(235, 87, 87, 0.486);
+  font-size: 12px;
+  font-weight: bold
+}
+
+.new-thought-button:focus, .new-thought-button:hover {
+  outline: none;
+  background-color: rgba(235, 87, 87, 0.966);
 }
 
 .thought-date {
   font-style: italic;
 }
 
-
-
 .hearts-button {
   width: 30px;
   height: 30px;
   border-radius: 50%;
   padding: 3px;
-  background-color: rgb(211, 211, 211);
+  background-color: rgb(197, 195, 195);
   border: 0;
   text-decoration: none;
 }
 
+.hearts-button:focus {
+  outline: none;
+}
+
 .hearts-inactive {
-  background-color: rgb(235, 236, 237);
+  background-color: rgb(197, 195, 195);
 }
 .hearts-active {
   background-color: rgba(235, 87, 87, 0.486);
