--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -12,6 +16,72 @@ code {
     monospace;
 }
 
+.message-container {
+  width: 90%;
+  margin: 20px auto;
+  margin-bottom: 30px;;
+  border: 1px #000 solid;
+  padding: 10px;
+  box-shadow: 5px 5px 0 #000;
+}
+
+/* MessageForm */
+
+.form {
+  background-color: #F2F0F0;
+}
+
+.form-label {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.textarea {
+  margin: 7px 0;
+  resize: none;
+  overflow: hidden;
+  width: 100%;
+  font-size: 14px;
+  padding: 5px;
+  outline: none;
+}
+
+.submit-button {
+  background-color: rgb(255,173,173);
+  display: block;
+  border-radius: 15px;
+  border: none;
+  padding: 8px 15px;
+  font-size: 12px;
+  outline: none;
+}
+
+/* MessageElement */
+
+.message {
+  margin: 3px 0 13px 0;
+  font-weight: 500;
+}
+
+.flex-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.likes-button {
+  border-radius: 50%;
+  border: none;
+  padding: 12px;
+  outline: none;
+}
+
+.amount-likes {
+  color: #999;
+  font-size: 13px;
+  font-weight: 500;
+}
+
 .date {
-  color: grey;
+  color:rgba(153, 153, 153, 0.671);
+  font-size: 13px;
 }
