--- a/code/src/index.css
+++ b/code/src/index.css
@@ -22,7 +22,9 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: radial-gradient(#ffadad, #ffe2e2);
+  /* background-image: radial-gradient(#ffadad, #ffe2e2); */
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(148,187,233,1) 0%, rgb(238, 174, 179) 100%);
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -128,4 +130,35 @@ code {
 
 .heart-emoji {
   font-size: 2rem;
+}
+
+@media (max-width: 767px) {
+  .header-container-heading, .message-text {
+    font-size: 2rem;
+  }
+
+  .heart-letter-emoji {
+    font-size: 4rem;
+  }
+
+  .post-message-label {
+    font-size: 2rem;
+  }
+
+  .message-container {
+    width: 70%;
+  }
+
+  .post-message-btn {
+    font-size: 1.2rem;
+    max-width: 100%;
+  }
+
+  .btn-container p {
+    font-size: 1.6rem;
+  }
+
+  .message-container-footer {
+    font-size: 1.6rem;
+  }
 }
