--- a/code/src/index.css
+++ b/code/src/index.css
@@ -39,7 +39,6 @@ textarea {
   border: 1px solid darkgray;
   box-sizing: border-box;
   width: 100%;
-  height: 80px;
   padding: 10px;
   resize: none;
 }
@@ -69,11 +68,6 @@ button {
   border: none;
 }
 
-button:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
 .form button {
   background-color: #FFADAD;
   padding: 12px 15px;
@@ -82,6 +76,12 @@ button:hover {
   max-width: 200px;
   font-family: 'Inconsolata', monospace;
   font-weight: bold;
+}
+
+.form button:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+  opacity: 0.8;
 }
 
 /*********THOUGHTS*********/
@@ -110,6 +110,11 @@ button:hover {
   width: 50px;
   margin: 0 10px 0 0;
   font-size: 18px;
+}
+
+.like-button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 .liked {
