--- a/code/src/index.css
+++ b/code/src/index.css
@@ -35,7 +35,7 @@ code {
   display: flex;
   padding: 30px;
   margin: 30px 0;
-  box-shadow: 8px 6px #000;
+  box-shadow: 12px 13px 0px -4px #000;
 }
 
 .header-container {
