--- a/code/public/style.css
+++ b/code/public/style.css
@@ -1,125 +1,143 @@
+/*--------------- POST FORM ---------------*/
+
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-text-input {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 10px 0;
+  padding: 15px 15px;
+  resize: none;
+}
+
+.character-counter {
+  font-size: 12px;
+  margin: -10px 0;
+  text-align: right;
+}
+
+.send-button {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin-top: 12px
+}
+
+.send-button .heart-left, .send-button .heart-right {
+  font-size: 16px;
+}
+
+.send-button .heart-left {
+  padding: 10px 5px 10px 15px;
+}
+
+.send-button .heart-right {
+  padding: 10px 15px 10px 5px;
+}
+
+button {
+  display: inline-block;
+  border: none;
+  margin: 0 10px;
+  padding: 10px;
+  margin: 0;
+  text-decoration: none;
+  border-radius: 20px;
+  background-color: #dddddd;
+  font-family: sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
+  text-align: center;
+}
+
+button:hover{
+  background: #ffadad;
+}
+
+button:focus{
+  outline: none;
+}
+
+
 
 /*--------------- THOUGHT ---------------*/
 
 .thought {
-    margin: 15px;
-    padding: 20px;
-    border: 2px solid black;
-    box-shadow: 8px 8px black;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  margin: 15px;
+  padding: 20px;
+  border: 2px solid black;
+  box-shadow: 8px 8px black;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: 80%;
 }
 
 .info-wrapper {
-    display: flex; 
-    justify-content: space-between;
-    align-items: center;
-    font-size: 12px;
-    
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
 }
 
 .time {
-    justify-self: flex-end;
-    color: rgb(180, 180, 180);
+  justify-self: flex-end;
+  color: rgb(180, 180, 180);
 }
 
 .heart-wrapper .heart {
-    margin: 0 10px;
-    padding: 10px;
-    font-size: 16px;
+  margin: 0 10px;
+  padding: 10px;
+  font-size: 16px;
 }
 
 .heart-wrapper .heart:hover {
-    background-color: #ffadad;
-    border-radius: 50%;
+  background-color: #ffadad;
+  border-radius: 50%;
 }
 
 .heart-wrapper {
-    display: flex;
-    align-items: center;
-    color: grey;
+  display: flex;
+  align-items: center;
 }
 
 .message {
-    margin: 0 0 25px 0;
-    white-space: normal;
-    hyphens: auto
+  margin: 0 0 25px 0;
+  white-space: normal;
+  hyphens: auto
 }
 
+/*--------------- MEDIA QUERIES ---------------*/
 
-
-/*--------------- POST FORM ---------------*/
-
-/* .though form {
-    width: 100%;
-} */
-
-/* .prompt {
-    font-size: 14px;
-} */
-
-.post-message {
-    box-sizing: border-box;
-    width: 100%;
-    margin: 10px 0;
-    padding: 15px 15px;
-    resize: none;
+@media (min-width: 700px) {
+  .thought {
+    width: 70%;
+  }
 }
 
-.character-counter {
-    margin-top: -12px;
-    text-align: right;
+@media (min-width: 800px) {
+  .thought {
+    width: 60%;
+  }
 }
 
-.send-button {
-    display: flex;
-    align-items: center;
-    padding: 0;
+@media (min-width: 900px) {
+  .thought {
+    width: 50%;
+  }
 }
 
-.send-button .heart-left, .send-button .heart-right {
-    font-size: 16px;
+@media (min-width: 1100px) {
+  .thought {
+    width: 45%;
+  }
 }
 
-.send-button .heart-left {
-    padding: 10px 5px 10px 15px;
+@media (min-width: 1250px) {
+  .thought {
+    width: 40%;
+  }
 }
-
-.send-button .heart-right {
-    padding: 10px 15px 10px 5px;
-}
-
-/*Borrowed button code*/
-button {
-    display: inline-block;
-    border: none;
-    margin: 0 10px;
-    padding: 10px;
-    margin: 0;
-    text-decoration: none;
-    border-radius: 20px;
-    background-color: #dddddd;
-    font-family: sans-serif;
-    font-size: 12px;
-    font-weight: bold;
-    cursor: pointer;
-    text-align: center;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-}
-
-button:hover,
-button:focus {
-    background: #ffadad;
-}
-
-button:focus {
-    outline: 1px solid #fff;
-    outline-offset: -4px;
-}
-
-button:active {
-    transform: scale(0.99);
-}
-
-
-/*---------------------*/
