--- a/code/src/styles/MessageForm.css
+++ b/code/src/styles/MessageForm.css
@@ -10,7 +10,7 @@
   border: 1px solid #000;
   box-shadow: 5px 5px;
   box-sizing: border-box;
-  
+  background-color: #f2f0f0;
 }
 
 .new-message-form label {
