--- a/code/src/styles/MessageElement.css
+++ b/code/src/styles/MessageElement.css
@@ -4,7 +4,6 @@
   font-family: 'Trispace', sans-serif;
   text-rendering: optimizeLegibility;
 }
-
  
   .recieved-message-container {
     display: flex;
@@ -12,8 +11,14 @@
     border: 1px solid #000;
     box-shadow: 5px 5px;
     margin-top: 35px;
-    box-sizing: border-box;
-    
+    box-sizing: border-box;    
+  }
+
+  .message-input {
+    word-wrap: break-word;
+    margin: 15px;
+    font-weight: bold;
+    font-size: 14px;
   }
   
   .like-button-and-date-container {
@@ -22,23 +27,26 @@
   }
 
   .like-button {
-    width: 200px;
+    width: 80px;
+    border: none;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .heart-container {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
+    font-size: 16px;
     background-color: #f2f0f0;
-    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
   }
-
-  
     
-  
   .date {
     font-style: italic;
   }
