--- a/code/src/styles/MessageForm.css
+++ b/code/src/styles/MessageForm.css
@@ -15,6 +15,7 @@
 
 .new-message-form label {
   font-weight:  bold;
+  font-size: 14px;
 }
 
 .new-message {
@@ -25,7 +26,3 @@
     resize: none;
   }
   
-.send-button {
-    
-}
- 
