--- a/code/src/styles/MessageElement.css
+++ b/code/src/styles/MessageElement.css
@@ -6,11 +6,12 @@
 }
  
   .recieved-message-container {
+    width: 500px;
     display: flex;
     flex-direction: column;
     border: 1px solid #000;
     box-shadow: 5px 5px;
-    margin-top: 35px;
+    margin: 20px auto;
     box-sizing: border-box;    
   }
 
