--- a/code/src/styles/MessageElement.css
+++ b/code/src/styles/MessageElement.css
@@ -25,16 +25,24 @@
   .like-button-and-date-container {
     display: flex;
     flex-direction: row;
+    margin-bottom: 10px;
   }
 
   .like-button {
     width: 80px;
+    background: none;
+    color: inherit;
     border: none;
-    background-color: transparent;
+    padding: 0;
+    color: #bbbbbb;
+    cursor: pointer;
+    outline: inherit;
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
+  
 
   .heart-container {
     width: 40px;
@@ -45,10 +53,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
+    cursor: pointer;    
   }
     
   .date {
+    margin-left: 270px;
     font-style: italic;
+    font-size: 12px;
+    color: #c7c7c7;
   }
   
