--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,11 +1,12 @@
 body {
-  margin: 50px;
+  margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 350px;
+  justify-content: center;
 }
 
 code {
@@ -20,7 +21,6 @@ code {
   padding: 10px;
   margin: 30px 0px 30px 0px;
   box-shadow: 5px 5px 0px 0px;
-
 }
 
 .input {
@@ -90,4 +90,17 @@ h4 {
   width: 40px;
   margin-right: 10px;
   outline: none;
+}
+
+/******************* MEDIA QUERIES ************/
+@media(min-width: 768px) {
+  body {
+    max-width: 400px;
+    
+  }
+}
+
+@media(min-width: 1200px) {
+  body {max-width: 500px;
+  }
 }
