--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,99 @@
+* {
+  font-family: 'Source Code Pro', 'monospace', 'Courier New';
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+p {
+  font-size: 12px;
+  color: lightgray;
+}
+
+.happy-thoughts-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.message-form-container {
+  width: 350px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 25px;
+  background: rgb(235, 234, 234);
+  padding: 10px;
+  border: solid black 1px;
+  box-shadow: 5px 5px;
+}
+
+.label-message {
+  font-size: 12px;
+}
+
+.input-message {
+  height: 60px;
+  margin: 20px 0;
+}
+
+.submit-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 200px;
+  border-radius: 15px;
+  border: none;
+  padding: 5px;
+  background: rgb(247, 202, 210);
+}
+
+.message-list-container {
+  max-width: 350px;
+}
+
+.message-element {
+  padding: 10px 25px;
+  margin-bottom: 25px;
+  border: solid black 1px;
+  box-shadow: 5px 5px;
+}
+
+.message-text {
+  font-size: 16px;
+  word-wrap: break-word;
+  color: black;
+}
+
+.heart-date {
+  display: flex;
+  justify-content: space-between;
+}
+
+.heart-button {
+  background: none;
+  border:none;
+  padding: 0;
+}
+.heart-container {
+  border-radius: 45px;
+  background: rgb(235, 234, 234);
+  padding: 8px 10px;
+  display: inline;
+  margin-right: 8px;
+
+}
+
+.heart-container:focus {
+  background: rgb(247, 202, 210);
+}
+
+.heart-emoji {
+  margin-right: 2px;
 }
