remove console logs, change structure to make app re-render after error message

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -280,7 +280,9 @@ textarea:focus {
 
   .error-message {
     width:450px;
-    font-size:20px;
+    font-size: 20px;
+    position: absolute;
+    top: 22%;
   }
 
   .try-again-button:hover {
