--- a/code/src/index.css
+++ b/code/src/index.css
@@ -10,18 +10,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.page-container {
+  background-color: #858585;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .message-wrapper {
   margin: 0;
   padding: 30px 0;
-  width: 300px;
+  /* width: 300px; */
   max-width: 500px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 .send-message-card {
   display: block;
-  width: 100%;
+  /* width: 100%; */
   height: 150px;
   background-color: #F2F0F0;
   border: 1px solid #858585;
@@ -108,10 +112,6 @@ code {
 }
 .red-counter {
   color: rgb(210, 70, 70);
-}
-.page-container {
-  background-color: #858585;
-
 }
 
 @media (max-width: 1200px) {
