--- a/code/src/index.css
+++ b/code/src/index.css
@@ -30,7 +30,7 @@ code {
   background-color: #F2F0F0;
   border: 1px solid #858585;
   box-shadow: 5px 5px #000000;
-  padding: 15px; 
+  padding: 25px; 
   font-size: 20px;
   margin: 10px;
   resize: none;
@@ -47,13 +47,16 @@ code {
   margin-top: 10px;
   resize: none;
 }
+.textarea-container {
+  margin-bottom: 10px;
+}
 .submit-button {
   background-color: #FFADAD;
   border-radius: 20px;
   border: none;
   font-family: "Roboto";
   font-size: 15px;
-  margin: 10px 0 30px 0;
+  margin-bottom: 10px;
   padding: 5px;
   color: #442E2E;
   cursor: pointer;
@@ -69,7 +72,7 @@ code {
   border: 1px solid #858585;
   font-family:"Roboto";
   box-shadow: 5px 5px #000000;
-  padding: 15px;
+  padding: 25px;
   font-size: 20px;
   word-wrap: break-word;
 }
