--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,6 +11,9 @@ code {
     monospace;
 }
 .page-container {
+  background-image: url('./images/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #858585;
   display: flex;
   flex-direction: column;
@@ -20,12 +23,10 @@ code {
 .message-wrapper {
   margin: 0;
   padding: 30px 0;
-  /* width: 300px; */
   max-width: 500px;
 }
 .send-message-card {
   display: block;
-  /* width: 100%; */
   height: 150px;
   background-color: #F2F0F0;
   border: 1px solid #858585;
