--- a/code/src/index.css
+++ b/code/src/index.css
@@ -31,6 +31,7 @@ body {
   overflow-y: auto;
   overflow-wrap: break-word;
   resize: none;
+  font-size: 16px; 
 }
 
 .thought-button {
@@ -163,4 +164,3 @@ body {
     width: 500px;
   }
 }
-
